--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,20 @@
 /* You can add global styles to this file, and also import other style files */
+
+/* Importing Bootstrap SCSS file. */
+@import "bootstrap/scss/bootstrap";
+
+$sidebar-width: 250px;
+.dvh-100 {
+  height: 100dvh;
+}
+.btn-flat {
+  padding: 0.3em 0.5em;
+  border-radius: 8px;
+  background-color: transparent;
+  border: none;
+  transition: background-color 150ms ease-in-out;
+  &:hover {
+    background-color: rgba(255, 255, 255, 0.1);
+    cursor: pointer;
+  }
+}
