--- a/src/pages/home/home.component.html
+++ b/src/pages/home/home.component.html
@@ -1,7 +1,8 @@
 <div class="row d-flex flex-row justify-content-center">
-  <div class="col-12 col-md-4">
+  <div class="col-12 col-md-4 text-center">
+    <small class="fw-light">Syllex</small>
     <div
-      class="w-100 d-flex flex-row justify-content-evenly align-items-center"
+      class="w-100 d-flex flex-row justify-content-evenly align-items-center mt-3"
     >
       <button type="button" class="btn-flat text-light">
         <lucide-icon [img]="ActivityIcon" [size]="20"></lucide-icon>
