--- a/src/layout/header/header.component.scss
+++ b/src/layout/header/header.component.scss
@@ -1,4 +1,66 @@
 #main {
   background-color: rgb(52, 52, 52);
   border-bottom: 1px solid rgb(87, 87, 87);
+  height: 50px;
+  /* Make header stack above content and be the positioning context */
+  position: fixed;
+  width: 100%;
+  z-index: 1000;
+}
+
+#creaBtn {
+  background-color: orange;
+  border: none;
+  width: 22px;
+  aspect-ratio: 1/1;
+  border-radius: 50%;
+  display: grid;
+  place-items: center;
+  padding: 0; /* avoid shifting the icon */
+  line-height: 0; /* remove inline baseline space */
+}
+
+#creaBtnContainer {
+  border: 1px solid rgb(120, 120, 120);
+  transition: background-color 150ms ease-in-out, border-color 150ms ease-in-out;
+  &:hover {
+    background-color: rgb(120, 120, 120);
+    cursor: pointer;
+  }
+}
+
+#searchBar {
+  font-size: 12px;
+  display: flex;
+  background-color: rgb(87, 87, 87);
+  border-radius: 8px;
+  padding: 0.2em 0.5em;
+  width: 300px;
+  input {
+    color: white;
+    background-color: transparent;
+    border: none;
+    &:focus {
+      outline: none;
+    }
+  }
+}
+
+#avatarMenu {
+  position: absolute;
+  z-index: 10;
+  /* Drop right under the header bar */
+  top: 50px;
+
+  right: 0;
+  background-color: rgb(52, 52, 52);
+  border: 1px solid rgb(87, 87, 87);
+  border-top: none;
+  border-radius: 0 0 0px 8px;
+  padding: 10px;
+  width: 250px;
+  transition: right 150ms linear;
+  &.visible {
+    right: -250px;
+  }
 }
