--- a/src/layout/sidebar/sidebar.component.html
+++ b/src/layout/sidebar/sidebar.component.html
@@ -1,19 +1,46 @@
-<nav class="sidebar text-white position-absolute p-3" [class.hidden]="!visible">
-  <small
-    class="mb-0 d-flex align-items-center justify-content-between text-light"
-  >
-    PROGETTI
-    <button class="btn-flat btn btn-sm text-light">
-      <lucide-icon [img]="PlusIcon" [size]="16"></lucide-icon>
-    </button>
-  </small>
+<nav
+  class="sidebar text-white position-absolute p-3 d-flex flex-column"
+  [class.hidden]="!visible"
+>
+  <section class="d-flex flex-column mb-4">
+    <small class="text-light m-0 ps-1">CONVIVO STUDIO</small>
+    <small
+      class="mt-2 d-flex flex-row justify-content-between align-items-center p-1"
+      id="areaSelect"
+      >REPARTO TECNICO
+      <lucide-icon [img]="ChevronDownIcon" [size]="12"></lucide-icon>
+    </small>
+  </section>
+  <section>
+    <div class="d-flex align-items-center gap-2 section-title line p-1">
+      <lucide-icon [img]="HomeIcon" [size]="16"></lucide-icon>
+      <small class="text-light m-0">HOME</small>
+    </div>
+    <div class="d-flex align-items-center gap-2 section-title line p-1">
+      <lucide-icon [img]="CheckCircleIcon" [size]="16"></lucide-icon>
+      <small class="text-light m-0">LE MIE TASK</small>
+    </div>
+    <div class="d-flex align-items-center gap-2 section-title line p-1">
+      <lucide-icon [img]="BellIcon" [size]="16"></lucide-icon>
+      <small class="text-light m-0">POSTA IN ARRIVO</small>
+    </div>
+  </section>
 
-  <section class="mt-3">
+  <hr />
+  <section class="flex-fill">
+    <small
+      class="mb-3 d-flex align-items-center justify-content-between text-light ps-1"
+    >
+      PROGETTI
+      <button class="btn-flat btn btn-sm text-light">
+        <lucide-icon [img]="PlusIcon" [size]="16"></lucide-icon>
+      </button>
+    </small>
     @for (p of projects; track $index) {
 
-    <div class="d-flex gap-2 align-items-center project-line pe-1 mb-3">
+    <div class="d-flex gap-2 align-items-center line p-1 mb-1">
       <div class="project-cell" [style.--cell-bg]="p.color">
-        <lucide-icon [img]="p.icon" [size]="20"></lucide-icon>
+        <lucide-icon [img]="p.icon" [size]="15"></lucide-icon>
       </div>
       <small class="text-truncate">{{ p.name }}</small>
     </div>
