--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,19 +2,38 @@
 
 /* Importing Bootstrap SCSS file. */
 @import "bootstrap/scss/bootstrap";
+@import url("https://fonts.googleapis.com/css2?family=Fragment+Mono:ital@0;1&display=swap");
 
-$sidebar-width: 250px;
+* {
+  font-family: "Fragment Mono", monospace;
+  font-weight: 400;
+  font-style: normal;
+}
 .dvh-100 {
   height: 100dvh;
 }
 .btn-flat {
-  padding: 0.3em 0.5em;
+  padding: 0.2em 0.4em;
   border-radius: 8px;
   background-color: transparent;
   border: none;
   transition: background-color 150ms ease-in-out;
   &:hover {
     background-color: rgba(255, 255, 255, 0.1);
+    cursor: pointer;
+  }
+}
+
+small {
+  font-size: 12px;
+}
+
+.line {
+  border-radius: 8px;
+  min-height: 28px;
+  transition: background-color 150ms ease-in-out;
+  &:hover {
+    background-color: lighten(rgb(52, 52, 52), 10%);
     cursor: pointer;
   }
 }
