--- a/src/components/avatar/avatar.component.scss
+++ b/src/components/avatar/avatar.component.scss
@@ -1,16 +1,27 @@
+:host {
+  display: inline-block;
+}
+
 .avatar {
-  background-color: #3f51b5;
-  color: white;
   border-radius: 50%;
   display: flex;
+  font-weight: light;
   align-items: center;
   justify-content: center;
-  font-weight: bold;
+  &:hover {
+    cursor: pointer;
+  }
+
+  /* When used in an overlapping group, add a subtle ring for separation */
+  :host-context(.avatar-group) & {
+    box-shadow: 0 0 0 var(--avatar-ring-width, 3px)
+      var(--avatar-ring-color, #1f1f1f);
+  }
 
   &.avatar-sm {
     width: 28px;
     height: 28px;
-    font-size: 12px;
+    font-size: 13px;
   }
 
   &.avatar-md {
