--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,10 +2,10 @@
 
 /* Importing Bootstrap SCSS file. */
 @import "bootstrap/scss/bootstrap";
-@import url("https://fonts.googleapis.com/css2?family=Fragment+Mono:ital@0;1&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
 
 * {
-  font-family: "Fragment Mono", monospace;
+  font-family: "Roboto", sans-serif;
   font-weight: 400;
   font-style: normal;
 }
@@ -13,7 +13,6 @@
   height: 100dvh;
 }
 .btn-flat {
-  padding: 0.2em 0.4em;
   border-radius: 8px;
   background-color: transparent;
   border: none;
@@ -25,7 +24,7 @@
 }
 
 small {
-  font-size: 12px;
+  font-size: 14px;
 }
 
 .line {
@@ -36,4 +35,8 @@ small {
     background-color: lighten(rgb(52, 52, 52), 10%);
     cursor: pointer;
   }
+}
+
+hr{
+  border: 1px solid rgba(128, 128, 128, 0.7)
 }
